2009-03-20  Les Harris  <lharris@gnome.org>

	* src/mud-connection-view.c (mud_connection_view_send): Input history
	fixes, no longer adds blank lines to the history queue. Now only sends
	properly terminated lines (\r\n).  If ZMP is enabled, now uses
	zmp.input to send input to the server.
	* src/mud-subwindow.c (mud_subwindow_entry_keypress_cb): Updated
	history code to include fixes from MudConnectionView.
	* src/zmp/zmp-core.c (zmp_core_register_commands): Now advertise
	support for zmp.input.

2009-03-19  Les Harris  <lharris@gnome.org>

	* src/zmp/zmp-subwindow.c (zmp_subwindow_do_input): Pass subwindow
	identifier as argument 1 of subwindow.input as per spec.

2009-03-19  Les Harris  <lharris@gnome.org>

	* src/handlers/mud-telnet-naws.c: Added new callback to delete-event.
	Disconnects resized signal if the main window is closing. Prevents
	hanging freeze when trying to close the window when a connection has
	been closed.
	* src/mud-window.c: Only send resized signal if the window is mapped.

2009-03-18  Les Harris  <lharris@gnome.org>

	* src/mud-subwindow.c (mud_subwindow_constructor): Show the scrollbar.

2009-03-18  Les Harris  <lharris@gnome.org>

	* src/mud-subwindow.c (mud_subwindow_class_init),
	(mud_subwindow_constructed), (mud_subwindow_configure_event_cb),
	(mud_subwindow_focus_in_cb): Removed map signal and code. Added
	focus-in callback on terminal to focus the entry.

2009-03-18  Les Harris  <lharris@gnome.org>

	* configure.ac: Bumped required GTK+ version to 2.14

2009-03-18  Les Harris  <lharris@gnome.org>

	* src/mud-subwindow.c (mud_subwindow_class_init),
	(mud_subwindow_constructor), (mud_subwindow_size_allocate_cb):
	Subwindow size fixes.

2009-03-18  Les Harris  <lharris@gnome.org>

	* src/mud-subwindow.c (mud_subwindow_constructor),
	(mud_subwindow_set_terminal_font),
	(mud_subwindow_set_size_force_grid),
	(mud_subwindow_update_geometry), (mud_subwindow_mapped_cb),
	(mud_subwindow_entry_keypress_cb), (mud_subwindow_set_size): Will no